# mediamovarr

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  TODO.md  config.json.example  instructions.md  pyproject.toml  requirements.txt
.github/instructions/: mediamovarr-instructions-v1-0-0.instructions.md
.github/workflows/: ci.yml
docs/: CONFIDENCE_GUIDE.md  CONFIDENCE_RULES_GUIDE.md
docs/plans/: 2025-09-01-media-organizer.md
mediamovarr/: __init__.py  __main__.py  classify.py  confidence_rules.py  config.py  database.py  discovery.py  mover.py  renamer.py  tmdb_client.py
tests/: __init__.py  test_classification_patterns.py  test_classify.py  test_database.py  test_integration.py  test_renamer.py  test_tmdb_integration.py
